# llm-spend

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pricing.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: demo-report.html
docs/launch/: friend-dm.md  show-hn.md
scripts/: synth_data.py
src/llm_spend/: cache.py  cli.py  pricing.py  schema.py
src/llm_spend/analysis/: _timeseries.py  attribution.py  forecast.py  risk.py  whatif.py
src/llm_spend/connectors/: _http.py  anthropic.py  csv_import.py  openai.py
src/llm_spend/report/: render.py
tests/: conftest.py  test_anthropic_connector.py  test_attribution.py  test_cache.py  test_cli.py  test_csv_import.py  test_forecast.py  test_http.py  test_openai_connector.py  test_pricing.py  test_render.py  test_risk.py  test_schema.py  test_whatif.py
